# omic

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml
.github/workflows/: android.yml  omic.yml
android/app/: build.gradle.kts
android/app/src/main/java/com/omic/omic/: MainActivity.kt  Message.kt  UI.kt
omic/: Cargo.toml  test.c
omic-android/: settings.gradle.kts
omic-android/app/: .gitignore  build.gradle.kts
omic-android/app/src/main/: AndroidManifest.xml
omic-android/app/src/main/java/com/omic/omic/: ConnectionInfo.kt  Extensions.kt  MainActivity.kt  Message.kt  MicrophoneService.kt  ServiceCallbacks.kt  UI.kt
omic-android/app/src/main/res/values/: strings.xml  themes.xml
omic-android/gradle/wrapper/: gradle-wrapper.properties
omic-android/oboe/: build.gradle.kts
omic-android/oboe/src/androidTest/java/com/example/oboe/: ExampleInstrumentedTest.kt
omic-android/oboe/src/main/cpp/: CMakeLists.txt  oboe.cpp
omic-android/oboe/src/main/java/com/omic/oboe/: OboeFFI.kt
omic-android/oboe/src/test/java/com/example/oboe/: ExampleUnitTest.kt
omic-android/opus/: build.gradle.kts
omic-android/opus/src/main/: .gitignore
omic-android/opus/src/main/cpp/: CMakeLists.txt  opus.cpp
omic-android/opus/src/main/java/com/omic/opus/: NativeLib.kt
omic-android/opus/src/main/jni/: Android.mk  Application.mk
omic-gtk/: Cargo.toml
omic-gtk/src/: main.rs
omic/src/: main.rs  message.rs  pw.rs
omicd/: Cargo.toml
omicd/src/: constants.rs  lib.rs  main.rs  message.rs  pipewire.rs  socket.rs
systemd/: omicd.service
(+3 files in other folders)
