[package]
name = "omicd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.21", features = ["derive"] }
lazy_static = "1.4.0"
libspa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3.17"

[lib]
name = "omic"
path = "./src/lib.rs"
